--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
+    "react-select": "^5.8.0",
     "tailwind-merge": "^2.3.0",
     "yup": "^1.4.0"
   },
