--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@hookform/resolvers": "^3.4.2",
     "amazon-cognito-identity-js": "^6.3.12",
     "axios": "^1.7.2",
+    "cropperjs": "^1.6.2",
     "i": "^0.3.7",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "npm": "^10.8.1",
     "react": "^18",
+    "react-cropper": "^2.3.3",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
     "react-verification-input": "^4.1.2",
@@ -25,6 +27,7 @@
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
+    "@types/cropperjs": "^1.3.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
