--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.4.2",
+    "@tanstack/react-query": "^5.40.0",
     "amazon-cognito-identity-js": "^6.3.12",
     "axios": "^1.7.2",
     "i": "^0.3.7",
